syntax = "proto3";
package matcha.view.ios;
import "github.com/gomatcha/matcha/proto/image.proto";
import "github.com/gomatcha/matcha/proto/text/text.proto";

option go_package = "ios";
option objc_class_prefix = "MatchaiOSPB";
option java_package = "com.github.gomatcha.matcha.proto.view.ios";
option java_outer_classname = "PbTabView";

message TabChildView {
    string title = 2;
    matcha.ImageOrResource icon = 3;
    matcha.ImageOrResource selectedIcon = 4;
    string badge = 5;
}

message TabView {
    repeated TabChildView screens = 1;
    int64 selectedIndex = 2;
    matcha.Color barColor = 3;
    matcha.Color selectedColor = 6;
    matcha.Color unselectedColor = 7;
    matcha.text.TextStyle selectedTextStyle = 8;
    matcha.text.TextStyle unselectedTextStyle = 9;
}

message TabEvent {
    int64 selectedIndex = 1;
}
